<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-dependencies</artifactId>
        <version>3.5.3</version>
        <!--<relativePath>org.springframework.boot:spring-boot-dependencies</relativePath>-->
    </parent>

    <groupId>org.luvx.boot</groupId>
    <artifactId>coding-parent-boot-dependencies</artifactId>
    <packaging>pom</packaging>

    <properties>
        <java.version>23</java.version>
        <maven-compiler-plugin.version>3.14.0</maven-compiler-plugin.version>

        <jackson-bom.version>2.20.1</jackson-bom.version>
        <kotlin.version>2.3.0-RC</kotlin.version>
        <junit-jupiter.version>6.0.0</junit-jupiter.version>

        <logback.version>1.5.21</logback.version>
        <slf4j.version>2.0.13</slf4j.version>
    </properties>

    <modules>
        <!--<module>disruptor-boot-starter</module>-->
        <module>etcd-spring-boot-starter</module>
    </modules>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                        <arg>-parameters</arg>
                    </compilerArgs>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>